Lots of Changes
Modified registration to include a captcha, designed a basic homepage,
modified session handling, modified error reporting, created captcha
validator for use anywhere, made the keystore automatically overwrite
existing keys for convenience, showing MessageBag errors globally,
urls in nav based on permissions.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6234,5 +6234,17 @@ label,
 .nav-logo {
   padding: 5px;
 }
+.welcome-container {
+  height: 100vh;
+  margin-top: -72px;
+  text-align: center;
+}
+#sir {
+  position: relative;
+  top: 50%;
+  bottom: 50%;
+  margin-left: -108px;
+  margin-top: -108px;
+}
 
 /*# sourceMappingURL=app.css.map */
