--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -4,8 +4,22 @@
 @font-family-sans-serif: "Roboto", Helvetica, Arial, sans-serif;
 
 body, label, .checkbox label {
-	font-weight: 300;
+  font-weight: 300;
 }
 .nav-logo {
   padding: 5px;
+}
+.welcome-container {
+  height: 100vh;
+  margin-top: -72px;
+  text-align: center;
+}
+
+#sir {
+  position: relative;
+  top: 50%;
+  bottom: 50%;
+  margin-left: -216/2px;
+  margin-top: -216/2px;
+
 }
