Prepared App For Launch
Prepared app for launch without any authentication features yet.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6240,7 +6240,7 @@ label,
   text-align: center;
 }
 #sir {
-  position: relative;
+  position: absolute;
   top: 50%;
   bottom: 50%;
   margin-left: -108px;
