--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -16,7 +16,7 @@ body, label, .checkbox label {
 }
 
 #sir {
-  position: relative;
+  position: absolute;
   top: 50%;
   bottom: 50%;
   margin-left: -216/2px;
