--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,5 +1,9 @@
 @import "bootstrap/bootstrap";
-
+@import "lumen/bootswatch";
+@import "lumen/variables";
+@import "fa/font-awesome";
+@import "extras/_bootstrap-datetimepicker";
+@import "summernote/summernote";
 @btn-font-weight: 300;
 @font-family-sans-serif: "Roboto", Helvetica, Arial, sans-serif;
 
